frontend-webapp/src/app/search/search.component.scss
@import '~styles/common';

.filter-bar {
  display: flex;
  height: 40px;
  align-items: center;
  padding-bottom: 6px;
  overflow-x: scroll;
}

.filter-item {
  display: flex;
  align-items: center;
  color: $dark-gray;
  margin-right: 1.1rem;
  font-size: 0.9rem;
  padding: 7px 12px;
  border-radius: $border-radius;
  margin-left: -12px;
  cursor: pointer;
  &:hover {
    background: lighten($light-gray, 8%);
  }
  > span {
    @include font-family(heading);
    @include font-weight(regular);
    white-space: nowrap;
  }
  > app-svg-icon {
    margin-top: 2px;
    margin-left: 0.3rem;
  }
}

.no-result-suggestion {
  line-height: 1.8rem;
}

.empty-search-result, .no-search-query {
  > h3 {
    color: $primary;
  }
}

